--- a/demo/Home.html
+++ b/demo/Home.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Tours Nature &amp;amp; Wildlife, our story">
     <meta name="description" content="">
-    <title>Home</title>
+    <title>Print Pack</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
